feat: add new drizzle persistence for address
